chore(dropdown): fix invisible label styling

--- a/packages/components/src/Dropdown/Dropdown.module.css
+++ b/packages/components/src/Dropdown/Dropdown.module.css
@@ -6,6 +6,10 @@
   @apply text-sm text-neutral-500 font-bold mb-1;
 }
 
+.srOnly {
+  @apply sr-only;
+}
+
 .dropdownOptions {
   @apply w-full absolute bg-white mt-2 py-2 rounded shadow-2 z-10;
 }
